<resources>
    <string name="app_name">clubDeportivo</string>
    <string name="lbl_Login">Login</string>
    <string name="login">Login</string>
    <string name="cobrar_cuota">Cobrar Cuota</string>
    <string name="nro_de_socio_3510">Nro. de Socio: 3510</string>
    <string name="dni_35082464">DNI: 35082464</string>
    <string name="nombre_mariela">Nombre: Mariela</string>
    <string name="apellido_laureat">Apellido: Laureat</string>
    <string name="monto">Monto</string>
    <string name="actividad">Actividad</string>
    <string name="salsa">Salsa</string>
    <string name="zumba">Zumba</string>
    <string name="mouint_65000">65000</string>
    <string name="musculaci_n">Musculación</string>
    <string name="total_210000">Total: 210000</string>
    <string name="mount_80000">80000</string>
    <string name="forma_de_pago">Forma de Pago:</string>
    <string name="cuota">Cuota:</string>
    <string name="pagar">Pagar</string>
    <string name="cancelar">Cancelar</string>
    <string name="factura">Factura</string>
    <string name="forma_de_pago_tarjeta_de_credito">Forma de Pago: Tarjeta de Credito</string>
    <string name="cuotas_3">Cuotas: 3</string>
    <string name="imprimir">Imprimir</string>
    <string name="nro_socio_3467">Nro. Socio: 3467</string>
    <string name="dni_30154846">DNI: 30154846</string>
    <string name="nombre_juan">Nombre: Juan</string>
    <string name="apellido_perez">Apellido: Perez</string>
    <string name="e_mail_correo_gmail_com">E-mail: user@correo.com</string>
    <string name="desde">Desde:</string>
    <string name="listar_vencimientos">Listar Vencimientos</string>
    <string name="hasta">Hasta:</string>
    <string name="buscar">Buscar</string>
    <string name="fec_vec">Fec. Vec.</string>
    <string name="dni">D.N.I.</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="_30145846">30145846</string>
    <string name="_10_09_2024">10/09/2024</string>
    <string name="juan">Juan</string>
    <string name="perez">Perez</string>
    <string name="_120000">120000</string>
    <string name="date_10_09_2024">10/09/2024</string>
    <string name="date_30145846">30145846</string>
    <string name="mount_120000">120000</string>
    <string name="dni_30145846">30145846</string>
    <string name="monto_120000">120000</string>
    <string name="volver">Volver</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar_cliente">Registrar Cliente</string>
    <string name="inprimir_carnet">Inprimir Carnet</string>
    <string name="listar_cuotas">Listar CUotas</string>
    <string name="salir">Salir</string>
    <string name="imprimir_carnet">Imprimir Carnet</string>
    <string name="fecha_desde">Fecha Desde</string>
    <string name="apto_fisico">Apto Fisico</string>
    <string name="socio">Socio</string>
    <string name="limpiar">Limpiar</string>
    <string name="aceptar">Aceptar</string>
    <string name="dni_3015486">DNI: 3015486</string>
    <string name="imprimir_carnet_ask">Imprimir Carnet?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="emailValue">E-mail: usuer@correo.com</string>
    <string name="passValue">Password: 123456</string>
</resources>