<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradiente_fondo"
    android:orientation="vertical">

    <!-- Imagen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_margin="40dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/urban_gym_group" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/lbl_Login"
        android:textColor="@color/red"
        android:textFontWeight="5"
        android:textSize="60sp"
        tools:ignore="TextSizeCheck,UnusedAttribute,TextContrastCheck" />

    <!-- E-mail -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/lbl_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/e_mail_correo_gmail_com"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/passValue"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons"
        android:text="@string/ingresar" />

</LinearLayout>


