<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/generalBack">

    <TextView
        android:id="@+id/lbl_title_print"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/imprimir_carnet"
        android:textColor="@color/black"
        android:textSize="50sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/lbl_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:text="@string/dni" />

    <!-- DNI a buscar -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/dni"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="DuplicateIds,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons"
        android:text="@string/buscar" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="170dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons"
        android:text="@string/volver" />

</LinearLayout>