<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/generalBack"
    tools:ignore="VisualLintBounds">

    <!-- Area de Datos del Cliente -->
    <TextView
        android:id="@+id/lbl_title_charge_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/cobrar_cuota"
        android:textColor="#263238"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/areas"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck">

        <!-- Nro. Socio y DNI -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_numberCC"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="@string/nro_de_socio_3510"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/lbl_dniCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dni_35082464"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- Nombre y Apellido -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_nameCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_mariela"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_surnameCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/apellido_laureat"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Area de Datos de Futura Factura -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/areas">

        <!--Titulos de datos de la futura Factura-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/lbl_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actividad"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_mount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:text="@string/monto"
                android:textSize="20sp" />

        </LinearLayout>

        <!--Line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/lbl_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_mount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/lbl_activity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_mount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/lbl_activity3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lbl_mount3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>

        <!--Line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/lbl_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="220dp"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Area Forma de Pago -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/areas">

        <!-- Forma de Pago -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/areas">

            <TextView
                android:id="@+id/lbl_way_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/forma_de_pago"/>


            <Spinner
                android:id="@+id/listView_pay_way"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"/>
        </LinearLayout>

        <!-- Cuotas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/areas"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/lbl_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="20sp"
                android:text="@string/cuota"/>

            <Spinner
                android:id="@+id/listView_fee"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons"
        android:text="@string/pagar" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/buttons"
        android:text="@string/cancelar" />

</LinearLayout>